designing recipe_details.html

--- a/css/recipe_html_styles.css
+++ b/css/recipe_html_styles.css
@@ -159,3 +159,20 @@ body {
   background-color: orange;
 }
 /* Cards end */
+
+/* recipe_details.html */
+.recipe-details {
+  color: white;
+  background-color: rgb(68, 67, 67);
+}
+
+.yt-container {
+  background-color: red;
+  width: 500px;
+  height: 500px;
+}
+
+.yt-container iframe {
+  width: 100%;
+  height: 100%;
+}
