--- a/css/recipe_html_styles.css
+++ b/css/recipe_html_styles.css
@@ -4,7 +4,7 @@ body.recipe-details {
   background-position: center;
   background-attachment: fixed;
   background-blend-mode: darken;
-  height: 100vh;
+  height: 150%;
   color: white;
   font-family: "Raleway", sans-serif;
 }
@@ -236,10 +236,8 @@ body.recipe-details #recipe_name {
 }
 
 /* Footer */
-/* footer {
 
-} */
-footer {
+/* footer {
   position: absolute;
 }
 
@@ -249,6 +247,8 @@ footer p {
   top: 15px;
   left: 40%;
   font-size: 15px;
+  filter: blur(5px);
+  animation: footer-p 2s forwards;
 }
 
 footer .footer-bg {
@@ -256,13 +256,53 @@ footer .footer-bg {
   height: 60px;
   position: absolute;
   filter: blur(8px);
-  background: linear-gradient(
-    to bottom,
-    rgb(16, 16, 16, 0.9),
-    rgb(21, 21, 21, 0.9)
-  );
+  background: rgba(0, 0, 0, 0.8);
 }
-/* footer {
-  margin-top: auto;
+
+@keyframes footer-p {
+  from {
+    filter: blur(5px);
+  }
+  to {
+    filter: blur(0);
+  }
 } */
+/* Footer End */
+
+/* Footer */
+footer {
+  color: white;
+  font-size: 15px;
+  text-align: center;
+  position: absolute;
+  /* bottom: 0; */
+  left: 0;
+  width: 100%;
+}
+
+footer .footer-bg {
+  position: absolute;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  height: 50px;
+  filter: blur(5px);
+  z-index: -1;
+}
+
+footer p {
+  font-family: "Raleway", sans-serif;
+  filter: blur(5px);
+  animation: footer-p 2s forwards;
+}
+
+@keyframes footer-p {
+  from {
+    filter: blur(5px);
+  }
+  to {
+    filter: blur(0);
+  }
+}
+
 /* Footer End */
