--- a/css/home_styles.css
+++ b/css/home_styles.css
@@ -77,7 +77,7 @@ body#home-page .body-bg {
   transition: 0.5s;
 }
 .navbar-brand:hover {
-  color: orange !important;
+  color: #da8649 !important;
 }
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
@@ -103,7 +103,7 @@ body#home-page .body-bg {
   text-align: right;
 }
 #active {
-  color: orange !important;
+  color: #da8649 !important;
 }
 /* Navbar End */
 /* Responsive */
