--- a/css/pages.css
+++ b/css/pages.css
@@ -1,14 +1,101 @@
 /* Navbar */
 .navbar {
   position: fixed;
-  top: 0;
+  top: -80px;
   z-index: 2;
   width: 100%;
+  animation: navbar 0.5s forwards;
+}
+
+.navbar-toggler {
+  /* background-color: green; */
+  width: 30px;
+  height: 25px;
+  position: relative;
+  border: none !important;
+}
+
+.navbar-toggler .top {
+  position: absolute;
+  background-color: white;
+  width: 100%;
+  height: 5px;
+  top: 0;
+  transform: translateX(-12px);
+}
+
+.navbar-toggler .top.active {
+  animation: tg-top 0.2s linear forwards;
+}
+
+@keyframes tg-top {
+  from {
+    top: 0;
+    rotate: 0deg;
+    transform: translateX(-12px);
+  }
+  to {
+    top: 80%;
+    rotate: 35deg;
+    transform: translateX(-15px);
+  }
+}
+
+.navbar-toggler .middle {
+  position: absolute;
+  background-color: white;
+  width: 100%;
+  height: 5px;
+  bottom: 40%;
+  transform: translateX(-12px);
+}
+
+.navbar-toggler .middle.active {
+  animation: tg-mid 0.2s linear forwards;
+}
+
+@keyframes tg-mid {
+  from {
+    bottom: 40%;
+    rotate: 0deg;
+    transform: translateX(-12px);
+  }
+  to {
+    bottom: 0;
+    rotate: 35deg;
+    transform: translateX(-15px);
+  }
+}
+
+.navbar-toggler .bottom {
+  position: absolute;
+  background-color: white;
+  width: 100%;
+  height: 5px;
+  bottom: 0;
+  transform: translateX(-12px);
+}
+
+.navbar-toggler .bottom.active {
+  animation: tg-bottom 0.2s linear forwards;
+}
+
+@keyframes tg-bottom {
+  from {
+    bottom: 0;
+    rotate: 0deg;
+    transform: translateX(-12px);
+  }
+  to {
+    bottom: 70%;
+    rotate: -35deg;
+    transform: translateX(-15px);
+  }
 }
 
 .nav-blur {
   filter: blur(5px);
-  animation: nav-blur 0.5s forwards;
+  animation: nav-blur 1s forwards;
 }
 
 @keyframes nav-blur {
@@ -17,6 +104,15 @@
   }
   to {
     filter: blur(0);
+  }
+}
+
+@keyframes navbar {
+  from {
+    top: -80px;
+  }
+  to {
+    top: 0;
   }
 }
 
@@ -30,6 +126,21 @@
   z-index: -1;
 }
 
+.navbar-bg.active {
+  height: 100%;
+  background-color: #54351e;
+  animation: nv-bg-active 1s forwards;
+}
+
+@keyframes nv-bg-active {
+  from {
+    background: rgba(0, 0, 0, 0.8);
+  }
+  to {
+    background-color: #54351e;
+  }
+}
+
 .navbar-brand {
   color: white;
   font-family: "Lily Script One", cursive;
@@ -37,6 +148,7 @@
   padding-left: 10px;
   transition: 0.5s;
 }
+
 .navbar-brand:hover {
   color: orange !important;
 }
@@ -66,6 +178,17 @@
 #active {
   color: orange !important;
 }
+
+@media only screen and (max-width: 576px) {
+  #site_navbar ul {
+    padding: 185px 0;
+  }
+
+  .nav-link {
+    text-align: center;
+  }
+}
+
 /* Navbar End */
 
 /* Footer */
@@ -301,9 +424,11 @@ body#about-page .about-content {
 
 .banner-text .underline {
   /* color: white; */
+  margin: auto;
   background-color: white;
   width: 100%;
   height: 5px;
+  margin: 5px auto;
 }
 
 .upper-bg .event-btn {
@@ -311,7 +436,7 @@ body#about-page .about-content {
   position: absolute;
   left: 0;
   right: 0;
-  top: 90%;
+  top: 93%;
   margin: auto;
   text-align: center;
 }
@@ -393,6 +518,7 @@ body.contact {
   color: white;
   /* transform: translateY(500px); */
   /* background-color: red; */
+  /* position: relative; */
 }
 
 .contact-section .content h3 {
@@ -460,4 +586,224 @@ body.contact {
   width: 35%;
   display: flex;
   justify-content: space-between;
+}
+
+.contact-section footer {
+  /* background-color: #54351e; */
+  height: auto;
+  margin-top: 100px;
+}
+
+.contact-section footer .footer-bg {
+  bottom: 0;
+}
+
+.contact-section footer p {
+  bottom: 0;
+  transform: translateY(15px);
+}
+
+/* ------------------Mobile Response ---------------*/
+@media only screen and (max-width: 600px) {
+  /* about page */
+
+  .navbar-brand {
+    font-size: 20px;
+  }
+
+  .abt .text-center {
+    font-size: 20px;
+  }
+
+  .abt .sentence h3 {
+    font-size: 16px;
+  }
+
+  .abt .sentence p {
+    font-size: 12px;
+  }
+
+  .abt-image img {
+    width: 200px;
+  }
+
+  #earth-container {
+    width: 200px;
+    height: 200px;
+  }
+
+  #earth-container:hover h5 {
+    font-size: 40px;
+  }
+
+  footer {
+    font-size: 10px;
+  }
+
+  /* event page */
+  .banner-text h1 {
+    font-size: 20px;
+  }
+
+  .banner-text h3 {
+    font-size: 18px;
+  }
+
+  .banner-text .underline {
+    height: 2px;
+  }
+
+  .banner-text h5 {
+    font-size: 16px;
+  }
+
+  #reg-btn {
+    font-size: 20px;
+  }
+
+  .event-content h5 {
+    font-size: 16px;
+  }
+
+  .event-content h4 {
+    font-size: 18px;
+  }
+
+  .event-content ol {
+    font-size: 16px;
+  }
+
+  /* blog page */
+  .blog-title h1 {
+    font-size: 20px;
+  }
+
+  .blog-img {
+    width: 250px;
+    height: 150px;
+    object-fit: cover;
+    /* margin: auto; */
+  }
+
+  .blog-title {
+    padding-top: 100px;
+  }
+
+  .blog-intro h3 {
+    margin-top: 10px;
+    font-size: 18px;
+  }
+
+  .blog-intro h4 {
+    font-size: 16px;
+  }
+
+  .blog-intro p {
+    font-size: 14;
+  }
+
+  /* contact page */
+  .contact-section .content h3 {
+    font-size: 20px;
+    width: 80%;
+    top: 100px;
+  }
+
+  .content .row {
+    /* padding-top: 200px;
+    background-color: yellow;
+    height: 92%; */
+    position: absolute;
+    top: 0;
+  }
+
+  .contact-section label {
+    font-size: 12px;
+  }
+
+  .contact-section footer {
+    background-color: #54351e;
+    height: auto;
+    margin-top: 100px;
+    position: absolute;
+  }
+
+  .contact-section footer .footer-bg {
+    bottom: 0;
+  }
+
+  .contact-section footer p {
+    bottom: 0;
+    transform: translateY(15px);
+  }
+
+  .content .row {
+    padding-top: 0;
+    /* background-color: yellow; */
+    /* height: 92%; */
+    position: relative;
+    /* width: 90%;
+    align-items: center; */
+  }
+
+  .contact-section .right {
+    /* background-color: purple; */
+    position: absolute;
+    top: 100px;
+  }
+
+  .contact-section .left {
+    /* background-color: yellow; */
+    height: 110px;
+    position: absolute;
+    bottom: 140px;
+  }
+
+  .contact-section .top-left {
+    /* margin-top: 10px; */
+    /* background-color: red; */
+    height: 80%;
+    /* position: relative; */
+  }
+
+  .contact-icons img {
+    width: 20px;
+  }
+
+  .contact-icons:nth-child(1) {
+    width: 200px;
+  }
+
+  .contact-icons:nth-child(2) {
+    width: 200px;
+  }
+
+  .contact-icons:nth-child(2) img {
+    margin-left: 3px;
+    width: 15px;
+  }
+
+  .contact-icons:nth-child(3) {
+    width: 200px;
+  }
+
+  .contact-section .bottom-left {
+    /* background-color: burlywood; */
+    width: 40%;
+    transform: translateY(-30px);
+    /* display: flex;
+  justify-content: space-between; */
+  }
+
+  .contact-icons span {
+    margin-left: 10px;
+  }
+
+  .bottom-left img {
+    /* margin-top: 10px; */
+    /* background-color: red; */
+    width: 20px;
+    /* display: flex;
+  justify-content: space-between; */
+  }
 }
